# eli

./: Cargo.toml  README.md
crates/eli-device/: Cargo.toml
crates/eli-device/src/: edge_error.rs  lib.rs  main.rs
crates/eli-device/src/capture/: discovery.rs  stream.rs
crates/eli-device/src/helpers/: dc_dcb.rs  fft.rs  mod.rs  writer_helper.rs
crates/eli-device/src/scanner/: args_vanilla.rs  dwell_capture.rs  fft_analysis.rs  hit_detection.rs  mod.rs  runner.rs  (+1 more)
crates/eli-edge/: Cargo.toml
crates/eli-edge-device/: Cargo.toml
crates/eli-edge-device/src/: edge_error.rs  ipc.rs  lib.rs  main.rs
crates/eli-edge-device/src/capture/: discovery.rs  stream.rs
crates/eli-edge-device/src/helpers/: dc.rs  mod.rs
crates/eli-edge-device/src/scanner/: config.rs  dwell_capture.rs  fft_analysis.rs  hit_detection.rs  mod.rs  runner.rs  sweep_planner.rs  vanilla.rs
crates/eli-edge-router/: Cargo.toml
crates/eli-edge-router/src/: lib.rs  main.rs  router_error.rs
crates/eli-edge/src/: lib.rs  main.rs
crates/eli-lab/: Cargo.toml
crates/eli-lab/src/: algorithms.rs  main.rs  mixing.rs  test_algorithms.rs
crates/eli-router/: Cargo.toml
crates/eli-router/src/: lib.rs  main.rs  router_error.rs  types.rs
crates/eli-router/src/router/: config_helper.rs  mod.rs  runtime.rs  vanilla.rs
crates/eli-router/src/router/flux/: command_router.rs  event_fanout.rs  mod.rs  state.rs
crates/eli-router/src/router/genesis/: mod.rs  rtl_genesis.rs  spawn.rs
crates/eli-router/src/router/registries/: device_registry.rs  listener_registry.rs  mod.rs  reg_vanilla.rs  worker_registry.rs
crates/eli-router/src/router/runspec/: control.rs  debug.rs  devctl.rs  io_handler.rs  mod.rs
crates/eli-stream-hub/: Cargo.toml
crates/eli_protocol/: Cargo.toml
crates/eli_protocol/src/: lib.rs
crates/eli_protocol/src/edge_vanilla/: mod.rs  result_vanilla.rs
crates/eli_protocol/src/edge_vanilla/scanner/: config_vanilla.rs  dwell_vanilla.rs  mod.rs  msg_vanilla.rs  sweep_vanilla.rs
crates/eli_protocol/src/router_vanilla/: cmd_vanilla.rs  device_vanilla.rs  mod.rs  result_vanilla.rs
crates/elux/: Cargo.toml  Dioxus.toml
devlog/: 03-03-mar-26-learning-more.md  04-04-mar-26.md
elux/: package-lock.json  package.json
elux/app/component/: WaterfallCanvas.tsx
elux/app/waterfall/: page.tsx
(+19 files in other folders)
