[package]
name = "eli-edge-device"
version = "0.1.0"
edition = "2024"


[dependencies]
soapysdr = "0.5.0"
num-complex = "0.4.6"
rustfft = "6.4.1"
crossbeam-channel = "0.5.15"
soapysdr-sys = "0.8.1"
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
serde_json = "1.0.149"
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6", features = ["cors"] }
rand = "0.9.4"


