[package]
name = "eli-edge-router"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
eli-edge-device = { path = "../eli-edge-device" }
eli_protocol = {path = "../eli_protocol" }