[package]
name = "eli_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
num-complex = "0.4.6"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
async-trait = "0.1.89"
soapysdr = "0.5.0"
soapysdr-sys = "0.8.1"
futures = "0.3.32"